fix: fix DailyStartService, GameRunService, ResumeService